--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,13 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Rosetta-Extensions
-version:      0.10
+version:      0.11
 version_from: 
 installdirs:  site
 requires:
     DBI:                           1.43
     Rosetta:                       0.37
+    SQL::Routine:                  0.46
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.17
