--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,13 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Rosetta-Extensions
-version:      0.14
+version:      0.15
 version_from: 
 installdirs:  site
 requires:
-    DBI:                           1.46
-    Rosetta:                       0.40
+    DBD::SQLite:                   1.08
+    DBI:                           1.48
+    Rosetta:                       0.41
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.17
